<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">勇者闯迷宫</string>
    <string name="server_version">1</string>
    <string name="atk_effect">增加攻击：</string>
    <string name="def_effect">增加防御：</string>
    <string name="hp_effect">增加基础生命：</string>
    <string name="agi_effect">增加敏捷：</string>
    <string name="str_effect">增加力量：</string>
    <string name="meet_effect">增加遇见怪物几率：</string>
    <string name="selected_hero_index">请选择或者创建一个存档.长按存档进行删除操作</string>
    <string name="create_index">创建新存档</string>
    <string name="adapter">adapter</string>
    <string name="item">item</string>
    <string name="position">position</string>
    <string name="level">层数：</string>
    <string name="created">创建于：</string>
    <string name="last_update">最近更新：</string>
    <string name="delete_index">删除存档：</string>
    <string name="conform">确认</string>
    <string name="name_input">输入名字</string>
    <string name="birth_input">选择你的生日</string>
    <string name="element_input">选择五行</string>
    <string name="gift_input">选择天赋</string>
    <string name="battle_to_long">战斗时间太长了，强制双方生命值减半</string>
    <string name="hit_happen">%1$s 使出了暴击，攻击伤害提高了。</string>
    <string name="atk_harm_color_msg">%1$s攻击了%2$s，造成了&lt;font color=\'red\'&gt;%3$s&lt;/font&gt;点伤害。</string>
    <string name="doge_happen">%1$s身手敏捷的闪开了%2$s的攻击</string>
    <string name="parry_happen">%1$s成功进行了一次格挡，减少了受到的伤害！</string>
    <string name="win_msg">%1$s击败了%2$s</string>
    <string name="lost_msg">%1$s被%2$s击败了</string>
    <string name="add_mate">获得了%1$s点锻造</string>
    <string name="move_to_next_level">%1$s进入了%2$s层迷宫， 获得了&lt;font color=\'#FF8C00\'&gt;%3$s&lt;/font&gt;点数奖励></string>
    <string name="pet_defend">%1$s舍身救主，挡下了攻击！</string>
    <string name="pet_index_suppression">%1$s被%2$s的霸气震慑得不敢动弹</string>
    <string name="pet_catch">成功捕获%1$s</string>
    <string name="pet_rate_effect">增加捕获概率：</string>
    <string name="lost">%1$s被打败后掉回了第一层</string>
    <string name="medallion">免死金牌</string>
    <string name="upgrade">升级</string>
    <string name="skill_rate_effect">增加技能释放概率：</string>
    <string name="silent_skill">%1$s想要释放技能 &lt;font color=\'red\'&gt;%2$s&lt;/font&gt; 但是被%3$s阻止了</string>
    <string name="release_skill">%1$s使用了技能 &lt;font color=\'red\'&gt;%2$s&lt;/font&gt;</string>
    <string name="pet_dialog_title">宠物列表</string>
    <string name="race_input">选择种族</string>
    <string name="loading">正在加载数据…</string>
    <string name="not_mount">未装备</string>
    <string name="point_label">能力点:</string>
    <string name="mate_label">锻造:</string>
    <string name="level_label">层数:</string>
    <string name="skill_title">技能列表</string>
    <string name="close">关闭</string>
    <string name="hero_skill">勇者</string>
    <string name="hero_hit">勇者之击</string>
    <string name="need_mount">装上</string>
    <string name="need_un_mount">卸下</string>
    <string name="empty"/>
    <string name="enable">激活</string>
    <string name="evil_talent">魔王天赋</string>
    <string name="evil_skill">魔王</string>
    <string name="sixth_skill_enable">八转开启</string>
    <string name="fifth_skill_enable">四转开启</string>
    <string name="fourth_skill_enable">二转开启</string>
    <string name="str_label">力量:</string>
    <string name="agi_label">敏捷:</string>
    <string name="properties_view_title">人物属性</string>
    <string name="mount_not_drop">出战中或者有备注的宠物无法丢弃</string>
    <string name="conform_drop">确认丢弃%1$s</string>
    <string name="select_pet">选择一个宠物</string>
    <string name="upgrade_success">%1$s 升级成功</string>
    <string name="upgrade_failed">%1$s 升级失败</string>
    <string name="no_pet">未设置宠物出战</string>
    <string name="restore_hp">%1$s恢复了%2$s的生命值</string>
    <string name="evolution">进化</string>
    <string name="evolution_failed">某些宠物在满足特殊条件的情况下可以进化。</string>
    <string name="evolution_successed">成功进化成%1$s</string>
    <string name="sort_type_up">类↑</string>
    <string name="sort_type_down">类↓</string>
    <string name="sort_name_up">名↑</string>
    <string name="sort_name_down">名↓</string>
    <string name="sort_color_up">颜↑</string>
    <string name="sort_color_down">颜↓</string>
    <string name="sort_intimacy_up">亲↑</string>
    <string name="sort_intimacy_down">亲↓</string>
    <string name="buy_label">购买</string>
    <string name="shop_tip">商店中的物品每次开启都随机刷新，如果没有你想要的，多打开几次吧！</string>
    <string name="upload">上传</string>
    <string name="query_exchange_items">别人上传的</string>
    <string name="my_exchange_items">我上传的</string>
    <string name="syn_server">正在同步服务器数据……</string>
    <string name="mark"><![CDATA[——>\n<——]]></string>
    <string name="pet_type">宠物</string>
    <string name="acc_type">装备</string>
    <string name="goods_type">物品</string>
    <string name="exchange_label">交换</string>
    <string name="need_mate">需要锻造 %1$s</string>
    <string name="need_level">需要层数 %1$s</string>
    <string name="gdtslogan">GDTslogan</string>
    <string name="click_to_skip">点击跳过</string>
    <string name="dodge_hit">闪避</string>
    <string name="btn_show_video_ad" >展示视频广告</string >
    <string name="element_skill">元素使</string>
    <string name="swindler_skill">欺诈师</string>
    <string name="pet_skill">宠物大师</string>
    <string name="share_string">我已经在这个迷宫里称霸四方了，你，要来挑战我吗？创新无等级角色扮演冒险放置游戏，宠物培养、装备自定义、技能混搭应有尽有。快来加群543177861享受一番吧！</string>
    <string name="hp_label">生命:</string>
    <string name="atk_label">攻击:</string>
    <string name="def_label">防御:</string>
    <string name="pause_label">暂停</string>
    <string name="save_label">存档</string>
    <string name="reincarnation_label">转生</string>
    <string name="item_label">物品</string>
    <string name="pet_label">宠物</string>
    <string name="accessory_label">装备</string>
    <string name="my_turn">%1$s的攻击回合</string>
    <string name="dialog">dialog</string>
    <string name="recycle">回收</string>
    <string name="clear">清除</string>
    <string name="index_tip">欢迎光临！点击下方按钮创建你的角色！创建成功后长按存档可以进行删除操作。</string>
    <string name="recover_tip">输入你备份的存档编号</string>
    <string name="start_battle">%1$s 和 %2$s 开始战斗</string>
    <string name="special_skill">特殊技能</string>
    <string name="real_my_action">选择你的行动！</string>
    <string name="real_wait_action">等待对方行动</string>
    <string name="real_lost">败！</string>
    <string name="real_win">胜！</string>
    <string name="palcae_tip">消耗3块碎片随机匹配和你排位等级相近的玩家进行对战，对战胜利后可以积累排位积分进而提升排位等级</string>
    <string name="palace_npc_battle_tip">消耗3块碎片和游戏内置人物对战（NPC）。无法获得排位积分，但是可以获得锻造点奖励。</string>
    <string name="palace_challenge_tip">消耗20块碎片挑战已经进入殿堂的玩家（离线）。战斗方式为车轮战！获胜后可以获得大量锻造点和能力点奖励</string>
    <string name="palace_legacy_tip">消耗30块碎片挑战老版本的玩家！获胜后可以获得大量锻造点奖励！</string>
    <string name="palace_range">匹配玩家对战</string>
    <string name="palace_npc">匹配NPC对战</string>
    <string name="not_debris">没有足够的碎片！在战斗塔中观看广告可以获得碎片。</string>
    <string name="ranging">匹配中</string>
    <string name="birthday_tip">生日快乐！今天是你的生日，感谢你在这个宝贵的时间里继续陪伴我们！本日内你击败怪物获得的锻造点和爬楼获取的能力点都会翻倍！</string>
    <string name="npc_accept">约起</string>
    <string name="npc_man">怪蜀黍</string>
    <string name="npc_gril">小姐姐</string>
    <string name="npc_refuse">不约</string>
    <string name="npc_tip">有个%1$s想和你约架&lt;br&gt;消耗1000点锻造，表现良好的话可以获得最多3倍奖励</string>
    <string name="eqicure_drop_pet">一键烤肉/煎蛋</string>
    <string name="invincible">开启%1$s秒的无敌时间！</string>
    <string name="quit_invincible">结束无敌状态</string>
    <string name="add_mate_for_streaking">连胜奖励！获得锻造%1$s</string>
    <string name="invincible_win">无敌状态！击杀%1$s</string>
    <string name="weaking">你正处于虚弱状态</string>
    <string name="action_point">行动点：</string>
    <string name="dieHarm">%1$s临死反击对%2$s造成了%3$s的伤害</string>
    <string name="debris_tip">点击确认后会获得一个兑换码。你可以通过过这个功能将你的碎片转换为兑换码送给其他人（或者其他账号）。</string>
    <string name="debris_change_result">你的碎片已经转换为兑换码：%1$s</string>
    <string name="MY_DEBRIS_KEY">查看兑换码</string>
</resources>
