<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/str_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="1"/>

        <TextView
                android:text="11111"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_weight="1"/>

        <ImageView
                android:src="@drawable/jiahao_zi"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:id="@+id/imageView"
                android:layout_weight="1"/>

        <SeekBar
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/agi_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="1"/>

        <TextView
                android:text="11111"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_weight="1"/>

        <ImageView
                android:src="@drawable/jiahao_zi"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:id="@+id/imageView"
                android:layout_weight="1"/>

        <SeekBar
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_weight="1"
                android:text="@string/point_label"/>

        <TextView
                android:text="111223"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>